# fastapi-postgres

./: .gitignore  alembic.ini  docker-compose.yml  main.py  pyproject.toml
alembic/versions/: 20cfbd100590_.py
api/: accounts.py  authentications.py  bases.py  currencies.py  users.py
api/utils/: accounts.py  bases.py  currencies.py  hashing.py  oauth2.py  token.py  users.py  utils.py
db/: database.py
db/models/: account.py  base.py  currency.py  user.py
schemas/: account.py  authentication.py  base.py  currency.py  user.py
tests/: conftest.py  main.py  test_account.py  test_currency.py  test_dataset.py  test_login.py  test_user.py
