[tool.poetry]
name = "fastapi-postgres"
version = "0.1.0"
description = ""
authors = ["shiro <gesrygohsinyong@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.25.0"
fastapi = "^0.108.0"
pydantic = {extras = ["email"], version = "^2.5.3"}
sqlalchemy = "^2.0.24"
psycopg2-binary = "^2.9.9"
sqlalchemy-utils = "^0.41.1"
alembic = "^1.13.1"
asyncpg = "^0.29.0"
flake8 = "^6.1.0"
pre-commit = "^3.6.0"
passlib = "^1.7.4"
bcrypt = "4.0.1"
python-jose = "^3.3.0"
python-multipart = "^0.0.6"
strenum = "^0.4.15"
pytest = "^7.4.4"
requests = "^2.31.0"
httpx = "^0.26.0"
alembic-postgresql-enum = "^1.0.2"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
black = "^23.12.1"
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
